<resources>
    <string name="simple_test_script">Simple Script Test</string>
    <string name="r" translatable="false"><![CDATA[>]]></string>
    <string name="l" translatable="false"><![CDATA[<]]></string>
    <string name="text_permission_manager">Permission Manager</string>
    <string name="text_androlua_test">AndroLua Test</string>
    <string name="no_net_refresh">have no network,try pull to refresh</string>
    <string name="image_loading">loading</string>
    <string name="no_net_tapme">network err</string>
    <string name="no_resources" translatable="false">一 END 一</string>
    <string name="instru_management">Instru Management</string>
    <string name="title_activity_settings">Setting</string>
    <string name="title_advanced_settings">Advanced Setting</string>
    <string-array name="list_pos_of_regex_param" translatable="false">
        
        <item>第一个</item>
        <item>第二个</item>
        <item>第三个</item>
        <item>最后一个</item>
    </string-array>
    <string-array name="list_float_voice_align" translatable="false">
        <item>居中</item>
        <item>靠左</item>
        <item>靠右</item>
    </string-array>
    <string-array name="list_translate_languages" translatable="false">
        <item>自动检测</item>
        <item>中文</item>
        <item>英语</item>
        <item>粤语</item>
        <item>文言文</item>
        <item>日语</item>
        <item>韩语</item>
        <item>法语</item>
        <item>西班牙语</item>
        <item>泰语</item>
        <item>阿拉伯语</item>
        <item>俄语</item>
        <item>葡萄牙语</item>
        <item>德语</item>
        <item>意大利语</item>
        <item>希腊语</item>
        <item>荷兰语</item>
        <item>波兰语</item>
        <item>保加利亚语</item>
        <item>爱沙尼亚语</item>
        <item>丹麦语</item>
        <item>芬兰语</item>
        <item>捷克语</item>
        <item>罗马尼亚语</item>
        <item>斯洛文尼亚语</item>
        <item>瑞典语</item>
        <item>匈牙利语</item>
        <item>繁体中文</item>
        <item>越南语</item>
    </string-array>
    <string-array name="voice_model_entities" translatable="false">
        <item>普通女声</item>
        <item>普通男声</item>
        
        <item>度逍遥</item>
        <item>度丫丫</item>
    </string-array>
    <string name="default_voice_model" translatable="false">0</string>
    <string-array name="voice_model_values" translatable="false">
        <item>0</item>
        <item>1</item>
        
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="list_script_type" translatable="false">
        <item>lua</item>
        <item>js</item>
    </string-array>
    <string-array name="list_preference_entry_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="list_chat_system" translatable="false">
        
        <item>图灵机器人</item>
    </string-array>
    <string-array name="list_home_funs" translatable="false">
        <item>屏幕助手</item>
        <item>语音识别</item>
    </string-array>
    <string-array name="list_fp_animation" translatable="false">
        <item>默认</item>
        <item>揭露</item>
    </string-array>
    <string-array name="list_stream_syn_output" translatable="false">
        <item>媒体音量</item>
        <item>铃声音量</item>
        <item>通知音量</item>
    </string-array>
    <string-array name="list_auto_sleep_duration">
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>1 hours</item>
        <item>2 hours</item>
        <item>5 hours</item>
        <item>Does not automatically sleep</item>
    </string-array>
    <string name="text_settings">Settings</string>
    <string name="text_search">Search</string>
    <string name="text_select_application">Select App</string>
    <string name="text_refresh">Refresh</string>
    <string name="title_new_inst">New Instruction</string>
    <string name="text_activity_name">Activity Name</string>
    <string name="text_activity_name_op">Activity Name(Optional)</string>
    <string name="text_choose_file">Choose File</string>
    <string name="text_operation_need_permission">This operation needs [%s]</string>
    <string name="text_opened">Opened</string>
    <string name="text_to_open">Open</string>
    <string name="text_regular_expression">Regular Expressions</string>
    <string name="text_add">Add</string>
    <string name="text_test">Test</string>
    <string name="text_pos_of_param">The position of param:</string>
    <string name="text_regex">Regex</string>
    <string name="text_input_to_test">Input to test</string>
    <string name="text_parse">Parse</string>
    <string name="test_tooltips_of_input_test_text">Enter TestText</string>
    <string name="text_description">Description</string>
    <string name="text_purpose">Purpose</string>
    <string name="text_test_output">Test output</string>
    <string name="text_parse_result_placeholder">March Word: %s  Param: %s</string>
    <string name="text_test_failed">Test failed</string>
    <string name="text_test_passed">Test passed</string>
    <string name="text_none">None</string>
    <string name="text_enter_at_last_one_regex">Enter at least one regular Expression</string>
    <string name="text_home">Home</string>
    <string name="text_store">Store</string>
    <string name="text_me">Me</string>
    <string name="test_set_script">Set Script</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_from_file">From file</string>
    <string name="text_open_failed">Open failed</string>
    <string name="text_cannot_open_file_manager">Unable to open file manager</string>
    <string name="text_tooltips_select_script">Set the script file:)</string>
    <string name="text_tooltips_select_script_type">Set the script type:)</string>
    <string name="text_tooltips_select_app">Select App</string>
    <string name="text_save_success">Save success</string>
    <string name="text_save_failed">Save failed</string>
    <string name="text_not_installed">Not installed</string>
    <string name="text_at_last_one_regex">At last one regex</string>
    <string name="text_confirm_to_exit">Confirm exit?</string>
    <string name="text_error_occurred">An error occurred.</string>
    <string name="text_cmd_in_app">In-App Command</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <string name="text_not_editable">Not editable</string>
    <string name="text_javascript_test">JavaScript Test</string>
    <string name="text_establish_connection">Establish connection with %s</string>
    <string name="text_disconnect_with_debugger">Disconnect remote debugger</string>
    <string name="text_add_follow_action">Add follow action</string>
    <string name="text_parent_action">Parent action:</string>
    <string name="text_executing">Executing</string>
    <string name="text_parsing">In parsing</string>
    <string name="text_listening">Listening</string>
    <string name="text_run">Run</string>
    <string name="text_optional">Optional</string>
    <string name="text_help">Help</string>
    <string name="text_msg_delete_action_node">此操作会同时删除此操作的跟随操作，同时删除云端分享记录(若分享过)。</string>
    <string name="text_confirm_2_del">confirm deletion</string>
    <string name="text_about">About</string>
    <string name="text_advanced_features">Advanced Features</string>
    <string name="text_show_toast_when_remove_ad">去除广告通知</string>
    <string name="text_show_toast_when_remove_ad_summary">去除广告时在通知栏显示反馈</string>
    <string name="text_sound_model">Voice model</string>
    <string name="text_volume">Volume</string>
    <string name="text_speak_speed">Speed of Speak</string>
    <string name="key_show_toast_when_remove_ad" translatable="false">show_toast_when_remove_ad</string>
    <string name="key_vibrate_reco_begin" translatable="false">vibrate_reco_begin</string>
    <string name="key_voice_syn_model" translatable="false">voice_syn_model</string>
    <string name="key_open_ad_block" translatable="false">open_ad_block</string>
    <string name="key_ad_wait_secs" translatable="false">ad_wait_secs</string>
    <string name="key_voice_control_dialog" translatable="false">voice_control_dialog</string>
    <string name="key_open_voice_wakeup" translatable="false">open_voice_wakeup</string>
    <string name="key_voice_syn_speed" translatable="false">voice_syn_speed</string>
    <string name="key_voice_syn_volume" translatable="false">voice_syn_volume</string>
    <string name="text_open_ad_killer_service">AdKiller service</string>
    <string name="text_remote_debug">Remote debug</string>
    <string name="text_open_voice_wakeup">Voice wakeup</string>
    <string name="text_play_voice_message">Play voice message</string>
    <string name="text_test_code">Test code</string>
    <string name="text_voice_control">Voice control</string>
    <string name="text_voice_control_dialog">Control the dialog</string>
    <string name="text_mark_management">Mark management</string>
    <string name="text_click_to_login">Sign in</string>
    <string name="hint_username_email">UserName/Email</string>
    <string name="text_login">Sign in</string>
    <string name="text_email_format_err">Incorrect Email Address</string>
    <string name="text_retrieve_password">Retrieve password</string>
    <string name="text_not_empty">Shouldn\'t empty</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_pswd">Confirm password</string>
    <string name="text_pass_not_same">Two passwords are different</string>
    <string name="text_ver_code">VerificationCode</string>
    <string name="text_get_ver_code">Get</string>
    <string name="text_email">EmailAddress</string>
    <string name="text_share">Share</string>
    <string name="text_upgrade">Upgrade</string>
    <string name="text_sync">Synchronize</string>
    <string name="text_vibrate_reco_begin">开始识别时震动</string>
    <string name="text_net_err">Network error</string>
    <string name="key_login_info" translatable="false">login_info</string>
    <string name="key_long_key_press_delay" translatable="false">long_key_press_delay</string>
    <string name="key_wakeup_with_headsethook" translatable="false">wakeup_with_headsethook</string>
    <string name="text_instructions">Instructions</string>
    <string name="text_examples">Examples</string>
    <string name="text_purchase_recharge_code_msg" translatable="false">
        1.联系qq获取（推荐）\n
        2.通过支付宝转账下方指定金额，在备注填写你的邮箱，不久你会收到含有充值码的邮件(很久未收到邮件，请联系QQ)\n
        3.点击下方[使用充值码]继续操作即可。\n
        另外，如果你可以为VOSP做出贡献，可成为永久高级会员。
    </string>
    <string name="text_advan_include_func" translatable="false">
        1.去广告次数跳无限制\n
        2.无限制文字提取\n
        3.无限制屏幕文字翻译\n
        4.无限制屏幕识别/文字识别\n
    </string>
    <string name="text_version_code">Version code</string>
    <string name="text_script">Script</string>
    <string name="text_script_type">Script language</string>
    <string name="text_show_name">Show name</string>
    <string name="text_select">Select</string>
    <string name="text_package_name">Package name</string>
    <string name="text_custom">Custom</string>
    <string name="text_type">Type: </string>
    <string name="hint_depths_array">Depths array</string>
    <string name="hint_depths_array_helper">split with \',\' like: 1,2,3</string>
    <string name="text_ad_texts">Texts</string>
    <string name="text_unlock_functions">Unlock functions</string>
    <string name="text_as_global_inst">As global inst</string>
    <string name="text_purchase_ways">Purchase way</string>
    <string name="text_add_shortcut_to_launcher">添加到桌面快捷方式</string>
    <string name="text_set_priority">设置优先级</string>
    <string name="text_mail_help">发送后请在收件箱中查看邮件，注意查看邮件是否被收进[垃圾箱]，若无法收到，可使用QQ与我联系，谢谢:)</string>
</resources>