<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_run"
        android:icon="@drawable/ic_run"
        android:title="@string/text_run"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/text_edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/text_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/text_delete"
        app:showAsAction="ifRoom" />
<!--    <item-->
<!--        android:id="@+id/menu_add_follow"-->
<!--        android:icon="@drawable/ic_add_white_24dp"-->
<!--        android:title="@string/text_add_follow_action"-->
<!--        app:showAsAction="ifRoom" />-->
    <item
        android:id="@+id/menu_as_global"
        android:title="@string/text_as_global_inst"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/text_settings"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_set_inst_priority"
        android:title="@string/text_set_priority"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_add_shortcut"
        android:title="@string/text_add_shortcut_to_launcher"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_inst_share"
        android:title="复制指令（用于分享导出）"
        app:showAsAction="never"/>
</menu>