<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/example_text"
        android:text="@string/text_instructions"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/instructions_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/example_text"
        android:text="@string/text_examples"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/examples_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/example_text"
        android:text="@string/text_regex"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/regs_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/example_text"
        android:text="@string/text_version_code"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/version_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/example_text"
        android:text="@string/text_script"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/script_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/example_text"
        android:text="@string/text_script_type"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/script_type_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
