<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">


    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="go2Test"
        android:text="@string/simple_test_script"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="permissionMan"
        android:text="@string/text_permission_manager" />

    <Button
        android:id="@+id/button9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="go2Voice"
        android:text="Voice" />

    <Button
        android:id="@+id/button100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="go2Lua"
        android:text="@string/text_androlua_test" />
    <Button
        android:id="@+id/button1000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="go2InstList"
        android:text="@string/instru_management" />
    <Button
        android:id="@+id/button110"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="go2Setting"
        android:text="@string/text_settings" />
    <Button
        android:id="@+id/button1110"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="go2Js"
        android:text="@string/text_javascript_test" />
    <Button
        android:id="@+id/button010"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="go2Welcome"
        android:text="Welcome" />
    <Button
        android:id="@+id/button_mark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="Marked Management" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/start_debug"
            android:text="start debug"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/stop_debug"
            android:text="stop debug"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/stop_wakeup"
            android:text="stop wakeup"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/start_wakeup"
            android:text="open wakeup"
            android:onClick="onClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>