<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="?attr/dialogPreferredPadding"
    android:paddingEnd="?attr/dialogPreferredPadding">

    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/text_recharege_pre_read"-->
    <!--android:textColor="@color/primary_text"-->
    <!--android:textStyle="bold" />-->

    <!--<Button-->
    <!--android:id="@+id/btn_guide"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="40dp"-->
    <!--android:text="@string/text_guide"-->
    <!--android:theme="@style/MaterialButton.Blue" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/text_unlock_functions"
        android:textColor="?attr/primary_text_color"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/text_advan_include_func"
        android:textColor="?attr/secondary_text_color" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/text_purchase_ways"
        android:textColor="?attr/primary_text_color"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/text_purchase_recharge_code_msg"
        android:textColor="?attr/secondary_text_color" />

    <TextView
        android:id="@+id/prices_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColor="?attr/secondary_text_color"
        tools:text="1月  12元" />
</LinearLayout>